updated the theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 # https://sheharyar.me/blog/free-ssl-for-github-pages-with-custom-domains/
-theme: jekyll-theme-cayman
+theme: jekyll-theme-so-simple
 url: https://florin-cosmin.dk
 enforce_ssl: www.florin-cosmin.dk
-
