updated base url

--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 remote_theme: mmistakes/so-simple-theme
 
 locale: en-US
-title: "So Simple"
-description: "A simple Jekyll theme for words and pictures."
-baseurl: "/so-simple-theme"
+title: "florin-cosmin.dk"
+description: "a developers blog"
+baseurl: "/"
 url: https://florin-cosmin.dk
 enforce_ssl: www.florin-cosmin.dk
-logo: "/images/so-simple-site-logo.png"
+logo: "/images/perfect-logo.png"
 date_format: "%B %-d, %Y"
 read_time: true
 words_per_minute: # 200
@@ -35,9 +35,9 @@ google_fonts:
     weights: "400,400i,700,700i"
 google_analytics: "UA-2011187-2"
 disqus:
-  shortname: "sosimpletheme"
+  shortname: "bboydflo"
 twitter:
-  username: "mmistakes"
+  username: "bboydflo"
 google_site_verification: "UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y"
 
 # Liquid
@@ -107,31 +107,25 @@ defaults:
 
 # Site Author
 author:
-  name: Michael Rose
+  name: Florin Cosmin Onciu
   picture: /images/michael-rose-photo.jpg
   email:
-  twitter: mmistakes
+  twitter: cosmin.onciu
   links:
     - title: Twitter
       url: https://twitter.com/mmistakes
       icon: fab fa-twitter-square
-    - title: Instagram
-      url: https://instagram.com/mmistakes
-      icon: fab fa-instagram
     - title: GitHub
-      url: https://github.com/mmistakes
+      url: https://github.com/bboydflo
       icon: fab fa-github-square
 
 # Footer Links
 footer_links:
   - title: Twitter
-    url: https://twitter.com/mmistakes
+    url: https://twitter.com/bboydflo
     icon: fab fa-twitter-square
-  - title: Instagram
-    url: https://instagram.com/mmistakes
-    icon: fab fa-instagram
   - title: GitHub
-    url: https://github.com/mmistakes
+    url: https://github.com/bboydflo
     icon: fab fa-github-square
   - title: Feed
     url: atom.xml
