--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,7 @@
 
 - title: Posts
   url: /posts/
-- title: Categories
-  url: /categories/
-- title: Tags
-  url: /tags/
+- title: About
+  url: /about/
 - title: Search
   url: /search/
