--- a/_config.yml
+++ b/_config.yml
@@ -33,12 +33,12 @@ google_fonts:
     weights: "400,400i,700,700i"
   - name: "Lora"
     weights: "400,400i,700,700i"
-google_analytics: "UA-2011187-2"
+# google_analytics: "UA-2011187-2"
 disqus:
   shortname: "bboydflo"
 twitter:
   username: "bboydflo"
-google_site_verification: "UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y"
+# google_site_verification: "UQj93ERU9zgECodaaXgVpkjrFn9UrDMEzVamacSoQ8Y"
 
 # Liquid
 liquid:
@@ -108,7 +108,7 @@ defaults:
 # Site Author
 author:
   name: Florin Cosmin Onciu
-  picture: /images/michael-rose-photo.jpg
+  picture: /images/profile-photo-florin.jpg
   email:
   twitter: cosmin.onciu
   links:
