--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -6,16 +6,19 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
 
+    steps:
       - name: Check out repository code
         uses: actions/checkout@v2
 
       - name: Install and Build 🔧
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+          registry-url: htps://registry.npmjs.com
       - run: npm install
       - run: npm run build
 
