--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -1,6 +1,9 @@
 name: Deploy Blog
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'build-and-deploy-website'
 
 jobs:
   build-and-deploy:
@@ -21,7 +24,7 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          branch: gh-pages # The branch the action should deploy to.
+          branch: master # The branch the action should deploy to.
           folder: out # The folder the action should deploy.
 
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo '💡 The ${{ github.repository }} repository has been cloned to the runner.'
