--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-plugin-preact": "3.0.4",
+    "preact": "10.5.13",
+    "preact-render-to-string": "5.1.19",
+    "react": "npm:@preact/compat@0.0.4",
+    "react-dom": "npm:@preact/compat@0.0.4",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "10.2.5",
