--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "10.2.0",
+    "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "2.1.3"
   },
   "devDependencies": {
-    "autoprefixer": "10.2.5",
-    "postcss": "8.2.13",
-    "postcss-preset-env": "6.7.0",
-    "tailwindcss": "2.1.2"
+    "autoprefixer": "10.2.6",
+    "postcss": "8.3.0",
+    "postcss-preset-env": "6.7.0"
   }
 }
