--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "autoprefixer": "10.2.6",
     "postcss": "8.3.5",
-    "postcss-preset-env": "6.7.0"
+    "postcss-preset-env": "6.7.0",
+    "tailwindcss-debug-screens": "2.0.0"
   }
 }
