--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "11.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "11.0.1",
+    "preact": "10.5.13",
     "tailwindcss": "2.2.2"
   },
   "devDependencies": {
