--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "fast-glob": "3.2.5",
+    "gray-matter": "4.0.3",
     "next": "11.0.1",
+    "next-mdx-remote": "3.0.2",
     "preact": "10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reading-time": "1.3.0",
     "tailwindcss": "2.2.2"
   },
   "devDependencies": {
