--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "0.4.1",
     "fast-glob": "3.2.5",
     "gray-matter": "4.0.3",
     "next": "11.0.1",
@@ -17,10 +19,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "1.3.0",
-    "tailwindcss": "2.2.2"
+    "tailwindcss": "2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "10.2.6",
+    "eslint": "7.29.0",
+    "eslint-config-next": "11.0.1",
     "postcss": "8.3.5",
     "postcss-preset-env": "6.7.0",
     "tailwindcss-debug-screens": "2.0.0"
