--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "0.4.1",
-    "fast-glob": "3.2.5",
+    "fast-glob": "3.2.6",
+    "fs-extra": "10.0.0",
     "gray-matter": "4.0.3",
     "next": "11.0.1",
     "next-mdx-remote": "3.0.2",
-    "preact": "10.5.13",
+    "preact": "10.5.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reading-time": "1.3.0",
